tests/examples/trait.out
version bump: 1.0.0 -> (Breaking) -> 2.0.0
warning: Breaking changes in `Abc`
  --> $REPO_PATH/tests/examples/trait.rs:19:5
   |
19 | /     pub trait Abc {
20 | |         type A;
21 | |         fn test(&self) -> u8;
22 | |         fn test3(&self) -> u8;
...  |
31 | |         fn test9(&self) -> u8;
32 | |     }
   | |_____^
   |
warning: Breaking (TraitItemRemoved { defaulted: false })
  --> $REPO_PATH/tests/examples/trait.rs:5:9
   |
5  |         fn test2(&self) -> u8;
   |         ^^^^^^^^^^^^^^^^^^^^^^
warning: Breaking (TraitItemRemoved { defaulted: true })
  --> $REPO_PATH/tests/examples/trait.rs:9:9
   |
9  | /         fn test5() -> u8 {
10 | |             0
11 | |         }
   | |_________^
warning: Breaking (TraitItemAdded { defaulted: false })
  --> $REPO_PATH/tests/examples/trait.rs:22:9
   |
22 |         fn test3(&self) -> u8;
   |         ^^^^^^^^^^^^^^^^^^^^^^
note: TechnicallyBreaking (TraitItemAdded { defaulted: true })
  --> $REPO_PATH/tests/examples/trait.rs:26:9
   |
26 | /         fn test6() -> u8 {
27 | |             0
28 | |         }
   | |_________^

warning: Breaking changes in `test7`
  --> $REPO_PATH/tests/examples/trait.rs:29:9
   |
29 |         fn test7() -> u16;
   |         ^^^^^^^^^^^^^^^^^^
   |
   = warning: Breaking (TypeChanged { error: Sorts(ExpectedFound { expected: u8, found: u16 }) })

warning: Breaking changes in `test8`
  --> $REPO_PATH/tests/examples/trait.rs:30:9
   |
30 |         fn test8(_: &Self) -> u8;
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = warning: Breaking (MethodSelfChanged { now_self: false })

warning: TechnicallyBreaking changes in `test9`
  --> $REPO_PATH/tests/examples/trait.rs:31:9
   |
31 |         fn test9(&self) -> u8;
   |         ^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: TechnicallyBreaking (MethodSelfChanged { now_self: true })

